--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
