--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@your-username/nordic-nature-ui",
+  "name": "eventyr-dev/eventyr-design",
   "version": "0.0.1",
   "description": "A minimalist, nature-inspired React design system.",
   "type": "module",
-  "main": "./dist/nordic-ui.umd.js",
-  "module": "./dist/nordic-ui.es.js",
+  "main": "./dist/eventyr-design.umd.js",
+  "module": "./dist/eventyr-design.es.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "exports": {
     ".": {
-      "import": "./dist/nordic-ui.es.js",
-      "require": "./dist/nordic-ui.umd.js",
+      "import": "./dist/eventyr-design.es.js",
+      "require": "./dist/eventyr-design.umd.js",
       "types": "./dist/index.d.ts"
     }
   },
